# app

./: nginx.conf
backend/: .env  .env.example  .gitignore  Dockerfile.deploy  Dockerfile.test  Dockerfile.test.nnn  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  test-entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: d8bdf0640bd7_merge_multiple_heads.py  initial_migration.py  xxxxxxxxxxxx_initial_migration_with_all_tables.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py
backend/app/api/endpoints/: __init__.py  auth.py  calendar_events.py  contacts.py  documents.py  forms.py  messages.py  users.py
backend/app/api/routes/: contacts.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: api_keys.py  auth.py  bids.py  calendar.py  config.py  contacts.py  deps_bridge.py  documents.py  messages.py  profile.py  sessions.py  users.py
backend/app/core/: cli.py  config.py  logging.py  security.py
backend/app/crud/: __init__.py  base.py  contacts.py  crud_calendar_event.py  crud_contact.py  crud_form.py  crud_form_response.py  crud_message.py  crud_user.py  users.py
backend/app/db/: base.py  base_class.py  licitacao_hub.pgsql  session.py
backend/app/models/: __init__.py  active_session.py  api_key.py  base.py  bid.py  calendar_event.py  calendar_events.py  contact.py  contacts.py  document.py  documents.py  events.py  form.py  form_response.py  form_responses.py  forms.py  menssages.py  message.py  messages.py  user.py  user_config.py  user_photo.py  user_photos.py  users.py
backend/app/redis/: __init__.py  client.py
backend/app/schemas/: __init__.py  api_key.py  base.py  bid.py  calendar.py  calendar_event.py  config.py  contact.py  contacts.py  document.py  events.py  form.py  form_response.py  forms.py  message.py  messages.py  msg.py  security.py  session.py  token.py  user.py  users.py
backend/app/services/: __init__.py  llm_service.py
backend/app/tasks/: __init__.py  process_document.py  processing.py
backend/tests/: .env.test  README.md  __init__.py  conftest.py
backend/tests/api/: test_auth.py
backend/tests/api/endpoints/: test_auth.py
docs/: BACKEND.md  FRONTEND.md  database.md  machine github.md
frontend/: .dockerignore  Dockerfile.frontend  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useAuth.ts  useI18n.ts  usePermissions.tsx
frontend/src/i18n/: i18n.ts
frontend/src/lib/: api.ts
frontend/src/pages/: DemoPage.tsx  ForgotPasswordPage.tsx  LandingPage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/store/: authStore.ts  (+2 more)
tests/: conftest.py
(+23 files in other folders)
